PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ReturnStatementExists.par
ReturnStatementExists {
var Int test = 0
seq add(Int input) : Int {
    input + 1
}
seq main() : Void {
    test = add(1)

}
}